# photon

./: .gitignore  CMakeLists.txt  benchmark.md
cpu/: attention.cc  attention.h  executor.h  feedforward.cc  feedforward.h  rope.cc  transformer.cc  transformer.h
include/: attention.h  backend.h  executor.h  feedforward.h  params.h  profiler.h  rope.h  transformer.h
layers/: CMakeLists.txt  attention.h  feedforward.h  math.h  math_utils.h  norm.h  rope.cc  rope.h  tokenizer.cc  tokenizer.h  transformer.h
meta-llama/: gen_testdata.py  generation.py  model.py  tokenizer.py
metal/: attention.h  attention.metal  attention.mm  executor.h  feedforward.h  feedforward.metal  feedforward.mm  norm.metal  params.metal  rope.metal  rope.mm  transformer.h  transformer.metal  transformer.mm
schema/: loader.h  model.h  pytorch_conversion.py  tensor.h  tokenizer.cc  tokenizer.h
shared/: profiler.cc  rope.cc
unit_tests/: CMakeLists.txt  main.cpp
unit_tests/layers/: attention_test.cc  feedforward_test.cc  rope_test.cc  tokenizer_test.cc  transformer_test.cc
